Uploads to s3 bucket when java is run locally.
TODO:
- need to fix the aws session credential refresh
- need to confirm working in docker environment (docker-entry point in particular with or without the explicity SMILE_CONFIG_HOME location)
- need to decide if the initialize process needs to actually sleep or not.

Signed-off-by: Angelica Ochoa <15623749+ao508@users.noreply.github.com>